--- a/src/sass/queries/queries.sass
+++ b/src/sass/queries/queries.sass
@@ -125,6 +125,14 @@
                 margin-top: 0
                 font-size: 35px
 
+    .section-footer
+        .grid
+            div:nth-child(2)
+                width: 100%
+
+                .form-container
+                    width: 100%
+
 @media screen and (max-width: 425px)
     .skills-section 
         .skills-card-grid
